# desktop-search

./: .pre-commit-config.yaml  cli.py  config.schema.json  create-static-files.py  nlp.py  plugin.py  pyproject.toml  readme.md  requirements.txt  serve.py  tox.ini  utils.py  wsgi.py
.github/workflows/: codeql-analysis.yml  main.yml
backends/: memory.py  whooshdb.py
desktopsearch/: cli.py  config.schema.json  nlp.py  plugin.py  serve.py  utils.py  wsgi.py
desktopsearch/backends/: memory.py  whooshdb.py
desktopsearch/plugins/: calmjs.py  plaintext.py  pygments.py  python.py
desktopsearch/templates/: back.htm  close.htm  config.htm  header.htm  index.htm  view-html.htm
examples/: config.json.example
plugins/: calmjs.py  plaintext.py  pygments.py  python.py
templates/: back.htm  index.htm  statistics.htm  view-html.htm
tests/: test_backends.py  test_nlp.py
