[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "desktop-search"
version = "0.1.0"
description = "Full text search for code and text files"
authors = [
  "Dobatymo <Dobatymo@users.noreply.github.com>",
]
readme = "readme.md"
license = "ISC license"
packages = [
  { include = "desktopsearch" },
]

[tool.poetry.scripts]
app = "desktopsearch.wsgi:main"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Flask = ">=2.3.2"
MarkupSafe = ">=2.1.1"
platformdirs = ">=3.5.0"
"calmjs.parse" = ">=1.3.0"
cheroot = ">=8.6.0"
humanize = ">=4.0.0"
jsonschema = ">=4.4.0"
pathspec = ">=0.11.1"
Pygments = ">=2.11.2"
spacy = ">=3.5.2"
rich = ">=12.0.0"
genutility = { extras = [
  "file",
  "json",
  "pickle",
  "rich",
  "time",
], version = ">=0.0.108" }
Pympler = ">=1.0.1"
Whoosh = ">=2.7.4"
importlib-resources = ">=6.0.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

lint.extend-select = [
  "B",
  "I",
]
lint.ignore = [
  "B011",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.bandit]
skips = [
  "B101",
]
