[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "desktop-search"
version = "0.1.0"
description = "Full text search for code and text files"
authors = [
  "Dobatymo <Dobatymo@users.noreply.github.com>",
]
readme = "readme.md"
license = "ISC license"
packages = [
  { include = "desktopsearch" },
]

[tool.poetry.scripts]
app = "desktopsearch.wsgi:main"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Flask = ">=3.0.3"
MarkupSafe = ">=2.1.5"
platformdirs = ">=4.3.6"
"calmjs.parse" = ">=1.3.2"
cheroot = ">=10.0.1"
humanize = ">=4.10.0"
jsonschema = ">=4.23.0"
pathspec = ">=0.12.1"
Pygments = ">=2.18.0"
spacy = ">=3.5.2"
rich = ">=13.9.3"
genutility = { extras = [
  "file",
  "json",
  "pickle",
  "rich",
  "time",
], version = ">=0.0.108" }
Pympler = ">=1.1"
Whoosh = ">=2.7.4"
importlib-resources = ">=6.0.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

lint.extend-select = [
  "B",
  "I",
]
lint.ignore = [
  "B011",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.bandit]
skips = [
  "B101",
]
